deployment_scripts/custos/vault/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: vault-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
   - hosts:
     - js-169-150.jetstream-cloud.org
     secretName: tls-vault-secret

  rules:
   - host: js-169-150.jetstream-cloud.org
     http:
      paths:
      - path: /
        backend:
          serviceName: vault
          servicePort: 8200
